# arTui

./: .gitignore  .pre-commit-config.yaml  DATABASE_README.md  LICENSE  README.md  arxiv_config.yaml  database.py  dev-sandbox.sh  main.css  main.py  pyproject.toml  requirements.txt  setup.py  startup_fetcher.py
.github/scripts/: update_dependencies.py
.github/workflows/: publish.yml  update-commit-badge.yml  update-dependencies.yml
artui/: __init__.py  __main__.py  app.py  cli.py  config.py  database.py  fetcher.py  main.css  user_dirs.py
artui/ui/: __init__.py  screens.py  utils.py  widgets.py
docs/: CNAME  faq.html  index.html  install.html  styles.css
