[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artui"
version = "1.0.0"
authors = [
    {name = "ArTui Contributors", email = "artui@example.com"},
]
description = "A Terminal User Interface for browsing arXiv papers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Terminals",
    "Topic :: Text Processing",
]
keywords = ["arxiv", "tui", "research", "papers", "terminal", "textual"]
dependencies = [
    "textual>=0.41.0",
    "arxiv>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "pyperclip>=1.8.0",
    "pygments>=2.10.0",
    "pyinspirehep>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/florianjonas/artui"
Repository = "https://github.com/florianjonas/artui"
Documentation = "https://github.com/florianjonas/artui#readme"
"Bug Tracker" = "https://github.com/florianjonas/artui/issues"

[project.scripts]
artui = "artui.cli:main"

[tool.setuptools.packages.find]
include = ["artui*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "arxiv.*",
    "pyinspirehep.*",
    "pyperclip.*",
]
ignore_missing_imports = true


